# plover_dictionary_lookup

./: .gitignore  Pipfile  README.md  README.rst  setup.cfg
plover_dictionary_lookup/: client.py  server.py
