[metadata]
name = plover_dictionary_lookup
version = 0.0.1
description = External dictionary lookup extension for Plover
long_description = file: README.rst
author = Nick Markopoulos
author_email = nsmarkop@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/nsmarkop/plover_dictionary_lookup
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
include_package_data = True
install_requires =
    plover>=4.0.0.dev7
packages =
    plover_dictionary_lookup

[options.entry_points]
plover.extension =
    plover_dictionary_lookup = plover_dictionary_lookup.server:LookupServer
